# ops-transformer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  requirements.txt  version.cmake
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitcode/ISSUE_TEMPLATE/: feature-request.yml
attention/chunk_gated_delta_rule/: README.md
attention/fused_causal_conv1d/: README.md
attention/incre_flash_attention/: README.md
attention/inplace_fused_causal_conv1d/: README.md
attention/lightning_indexer_v2/: README.md
attention/lightning_indexer_v2_metadata/: README.md
attention/mixed_quant_sparse_flash_mla/: README.md
attention/mixed_quant_sparse_flash_mla_metadata/: README.md
attention/mla_prolog/: README.md
attention/mla_prolog_v2/: README.md
attention/quant_lightning_indexer_v2_metadata/: README.md
attention/sparse_flash_attention/: README.md
attention/sparse_flash_mla/: README.md
attention/sparse_flash_mla_grad/: README.md
attention/sparse_flash_mla_grad_metadata/: README.md
attention/sparse_flash_mla_metadata/: README.md
attention/sparse_lightning_indexer_kl_loss_grad/: README.md
attention/sparse_lightning_indexer_kl_loss_grad_metadata/: README.md
cmake/: aclnn_ops_transformer.h.in  build_empty_package.cmake  config.cmake  custom_build.cmake  dependencies.cmake  fetch_cann_cmake.cmake  func.cmake  func_utest.cmake  intf_pub.cmake  intf_pub_linux.cmake  level2_ops_list  makeself_built_in.cmake  obj_func.cmake  package.cmake  rty_obj_func.cmake  runtimeKB.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake  Findmetadef.cmake  Findmmpa.cmake  Findnnopbase.cmake  Findoptiling.cmake  Findplatform.cmake  Findruntime.cmake  Findtilingapi.cmake
cmake/scripts/: check_version_compatible.py  convert_yaml.py  fix_format.sh  get_soc_version.py  parse_changed_files.py  prepare.sh  pypto_codegen.py
common/stub/: CMakeLists.txt
docs/: QUICKSTART.md  README.md
docs/zh/: menu_aclnn_api.md  op_api_list.md  op_list.md  torch_api_list.md
experimental/attention/: Attention融合算子Experimental使用说明.md
experimental/attention/quant_block_sparse_attn/tests/ut/op_kernel/arch35/: CMakeLists.txt  test_quant_block_sparse_attn.cpp
ffn/ffn_worker_batching/: README.md
ffn/ffn_worker_scheduler/: README.md
gmm/grouped_matmul_activation_quant/: README.md
gmm/grouped_matmul_swiglu_quant_v2/: README.md
gmm/quant_grouped_matmul_inplace_add/: README.md
mc2/all_gather_matmul_v2/: README.md
mc2/allto_all_matmul/: README.md
mc2/common/: CMakeLists.txt
mc2/distribute_barrier/: README.md
mc2/distribute_barrier_extend/: README.md
mc2/inplace_matmul_all_reduce_add_rms_norm/: README.md
mc2/matmul_all_reduce/: README.md
mc2/matmul_all_reduce_add_rms_norm/: README.md
mc2/matmul_allto_all/: README.md
mc2/matmul_reduce_scatter/: README.md
mc2/matmul_reduce_scatter_v2/: README.md
scripts/: oat_check.sh
tests/: requirements.txt  test_config.yaml
torch_extension/: README.md  setup.py
(+1996 files in other folders)
